--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "pg": "^7.4.1",
